Landing Page working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,19 +4,44 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/MainTheme">
+
+        <!-- Splash Activity -->
+        <activity
+            android:name=".Splash.SplashActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SplashActivity"></activity>
+
+        <!-- Landing Activity -->
+        <activity
+            android:name=".Landing.LandingActivity"
+            android:theme="@style/NoActionBarTheme" />
+
+        <!-- Sign In Fragment -->
+        <activity
+            android:name=".Landing.SignInFragment"
+            android:theme="@style/NoActionBarTheme"   />
+
+        <!-- Sign Up Fragment -->
+        <activity
+            android:name=".Landing.SignUpFragment"
+            android:theme="@style/NoActionBarTheme"/>
+
+        <!-- Main Activity -->
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/MainTheme" />
+
     </application>
 
 </manifest>
