--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/MainTheme">
+        android:theme="@style/ActionBarTheme">
 
         <!-- Splash Activity -->
         <activity
@@ -27,20 +27,12 @@
             android:name=".Landing.LandingActivity"
             android:theme="@style/NoActionBarTheme" />
 
-        <!-- Sign In Fragment -->
-        <activity
-            android:name=".Landing.SignInFragment"
-            android:theme="@style/NoActionBarTheme"   />
 
-        <!-- Sign Up Fragment -->
-        <activity
-            android:name=".Landing.SignUpFragment"
-            android:theme="@style/NoActionBarTheme"/>
 
         <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
-            android:theme="@style/MainTheme" />
+            android:theme="@style/NoActionBarTheme" />
 
     </application>
 
