-Removed RelativeLayout from sign_in_forgot_password_dialog -Created a folder for MainActivity and put it inside

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
 
         <!-- Main Activity -->
         <activity
-            android:name=".MainActivity"
+            android:name=".Main.MainActivity"
             android:theme="@style/NoActionBarTheme" />
 
     </application>
