- Working on menu - Missing code for contact and sign out

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,27 @@
         <activity
             android:name=".Main.MainActivity"
             android:theme="@style/NoActionBarTheme" />
+
+        <!-- My Account Activity -->
+        <activity
+            android:name=".MyAccount.MyAccountActivity"
+            android:theme="@style/NoActionBarTheme" />
+
+        <!-- Dashboard Activity -->
+        <activity
+            android:name=".Dashboard.DashboardActivity"
+            android:theme="@style/NoActionBarTheme" />
+
+        <!-- Info Activity -->
+        <activity
+            android:name=".Info.InfoActivity"
+            android:theme="@style/NoActionBarTheme" />
+
+        <!-- Settings Activity -->
+        <activity
+            android:name=".Settings.SettingsActivity"
+            android:theme="@style/NoActionBarTheme" />
+
     </application>
 
 </manifest>
