- Rename all instances of my account to profile - Added imageView and textView's to show a picture, full name, and email

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,9 +37,9 @@
             android:name=".Activity.ActivityActivity"
             android:theme="@style/NoActionBarTheme" />
 
-        <!-- My Account Activity -->
+        <!-- Profile Activity -->
         <activity
-            android:name=".MyAccount.MyAccountActivity"
+            android:name=".Profile.ProfileActivity"
             android:theme="@style/NoActionBarTheme" />
 
         <!-- Contact Us Activity -->
