--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,6 @@ dependencies {
     implementation 'com.gjiazhe:MultiChoicesCircleButton:1.0'
 
     // Added for confetti animation
-    implementation 'nl.dionsegijn:konfetti:1.1.2'
+    implementation 'com.github.jinatonic.confetti:confetti:1.1.1'
 
 }
