- Changed wait length before onBackPress to close the app so it matches the toast - Added new activities to match their current name - Added activities to add tasks, habits, and timers - Added waveView for wave animations - Added icon for "back" button

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     // Added for confetti animation
     implementation 'com.github.jinatonic.confetti:confetti:1.1.1'
 
+    //Added for wave animation
+    implementation 'com.scwang.wave:MultiWaveHeader:1.0.0-alpha-1'
 }
