- Redesigned Landing Page - Removed text from landing page - Fixed 2 instances of dialogFragment bug found in Sign In Page - removed Buttons in favor of fab for facebook and google buttons - Changed facebook and google icons - removed cardView from dialogFragments - fixed no transparency bug in dialogFragments - Cleaned up code for splash and Landing activities including their children

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     // Added for CardView
     implementation 'com.android.support:cardview-v7:27.1.1'
 
+    // Added for expandable CardView
+    implementation 'com.alespero:expandable-cardview:0.8'
+
     // Added for toasts
     implementation 'com.muddzdev:styleabletoast:2.1.2'
 
